# pixelbuf-pi-animation

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  requirements.txt  setup.cfg
docs/: Basic Concepts.md  Data Structures.md  Parsers.md  Players.md  index.md  requirements.txt
docs/API Reference/data/: Animation.md  Frame.md  Pixel.md
docs/API Reference/parser/: AnimationParser.md  JsonAnimationParser.md  MsgPackAnimationParser.md
docs/API Reference/player/: SimplePixelBufPlayer.md
notebooks/: Christmas Themed Animation Test.ipynb  Programatic Generation of Animations.ipynb  README.md  Rainbow.ipynb  Save and Load Examples.ipynb  Simple Player Test.ipynb  Time Skew Testing.ipynb
notebooks/examples/: Alternating Rainbow Gradient Sweep.ipynb  Christmas Themed Animation Test.ipynb  Programatic Generation of Animations.ipynb  Rainbow.ipynb  Save and Load Examples.ipynb  Simple Gradient Sweep.ipynb
notebooks/experiments/: Managing Animations in a Separate Process Client Testing.ipynb  Managing Animations in a Separate Process.ipynb  Time Skew Testing.ipynb
notebooks/testing/: Simple Player Test.ipynb
pixelbuf_pi_animation/: data.py  parser.py  player.py
