[metadata]
name = pixelbuf-pi-animation
version = 0.0.1
author = Brian Stempin
author_email = brian.stempin@gmail.com
description = A package to render Adafruit LED products using the Raspberry Pi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sectional-Art/pixelbuf-pi-animation
project_urls =
    Documentation = https://pixelbuf-pi-animation.readthedocs.io/en/latest/
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Topic :: System :: Hardware

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    adafruit-circuitpython-pixelbuf >= "1.1.1"
    dacite >= "1.6.0"
    msgpack >= "1.0.1"

[options.packages.find]
where = .
